--- a/data/proto/activity/BUILD
+++ b/data/proto/activity/BUILD
@@ -1,4 +1,8 @@
 load("@rules_proto_grpc//python:defs.bzl", "python_proto_compile")                                  
+
+package(                                                                                            
+  default_visibility = ["//:data_consumer"]                                                                   
+) 
                                                                                                     
 proto_library(                                                                                      
     name = "activity_timestamp_proto",                                                                     
@@ -17,6 +21,26 @@ python_proto_compile(
 )                                                                                                   
 
 proto_library(                                                                                      
+    name = "activity_proto",                                                                     
+    srcs = ["activity.proto"],                                                                   
+    deps = [
+			":earning_activity_proto",
+			":reorg_activity_proto",
+			":trading_activity_proto",
+		]
+)
+
+cc_proto_library(                                                                                   
+    name = "activity_cc_proto",                                                                  
+    deps = [":activity_proto"],                                                                  
+)                                                                                                   
+                                                                                                    
+python_proto_compile(                                                                               
+    name = "activity_python_proto",                                                              
+    deps = [":activity_proto"],                                                                  
+)
+
+proto_library(                                                                                      
     name = "earning_activity_proto",                                                                     
     srcs = ["earning_activity.proto"],                                                                   
     deps = [":activity_timestamp_proto"]
@@ -29,5 +53,37 @@ cc_proto_library(
                                                                                                     
 python_proto_compile(                                                                               
     name = "earning_activity_python_proto",                                                              
+    deps = [":earning_activity_proto"],                                                                  
+)
+
+proto_library(                                                                                      
+    name = "reorg_activity_proto",                                                                     
+    srcs = ["reorg_activity.proto"],                                                                   
+    deps = [":activity_timestamp_proto"]
+)                                                                                                   
+                                                                                                    
+cc_proto_library(                                                                                   
+    name = "reorg_activity_cc_proto",                                                                  
+    deps = [":earning_activity_proto"],                                                                  
+)                                                                                                   
+                                                                                                    
+python_proto_compile(                                                                               
+    name = "reorg_activity_python_proto",                                                              
+    deps = [":earning_activity_proto"],                                                                  
+)
+
+proto_library(                                                                                      
+    name = "trading_activity_proto",                                                                     
+    srcs = ["trading_activity.proto"],                                                                   
+    deps = [":activity_timestamp_proto"]
+)                                                                                                   
+                                                                                                    
+cc_proto_library(                                                                                   
+    name = "trading_activity_cc_proto",                                                                  
+    deps = [":earning_activity_proto"],                                                                  
+)                                                                                                   
+                                                                                                    
+python_proto_compile(                                                                               
+    name = "trading_activity_python_proto",                                                              
     deps = [":earning_activity_proto"],                                                                  
 )
