--- a/data/source/html/BUILD
+++ b/data/source/html/BUILD
@@ -4,8 +4,10 @@ py_binary(
     name = "yahoo_quote_parser_test",
     srcs = ["yahoo_quote_parser_test.py"],
     imports = ["../antlr/yahoo_quote_antlr.py"],
-    data = ["//data/source/html/testdata:yahoo_quote_microsoft_html"],
-    args = ["$(location //data/source/html/testdata:yahoo_quote_microsoft_html)"],
+    # data = ["//data/source/html/testdata:yahoo_quote_gspc_html"],
+    # args = ["$(location //data/source/html/testdata:yahoo_quote_gspc_html)"],
+    data = ["//data/source/html/testdata:yahoo_quote_gspc_html"],
+    args = ["$(location //data/source/html/testdata:yahoo_quote_gspc_html)"],
     deps = [
 				"//data/source/antlr:yahoo_quote_antlr_py",
         "@antlr4_runtimes//:python",
