--- a/data/proto/BUILD
+++ b/data/proto/BUILD
@@ -1,4 +1,4 @@
-load("@rules_proto_grpc//python:defs.bzl", "python_proto_compile")                                  
+load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")                                  
 
 package(                                                                                            
   default_visibility = ["//:data_consumer"]                                                                   
@@ -15,7 +15,7 @@ cc_proto_library(
     deps = [":fin_entity_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_compile(                                                                               
+python_proto_library(                                                                               
     name = "fin_entity_python_proto",                                                              
     deps = [":fin_entity_proto"],                                                                  
 )
@@ -34,7 +34,26 @@ cc_proto_library(
     deps = [":timeline_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_compile(                                                                               
+python_proto_library(                                                                               
     name = "timeline_python_proto",                                                              
     deps = [":timeline_proto"],                                                                  
+)
+
+proto_library(                                                                                      
+    name = "data_proto",                                                                     
+    srcs = ["data.proto"],                                                                   
+    deps = [
+			":fin_entity_proto",
+			":timeline_proto",
+		]
+)                                                                                                   
+                                                                                                    
+cc_proto_library(                                                                                   
+    name = "data_cc_proto",                                                                  
+    deps = [":data_proto"],                                                                  
+)                                                                                                   
+                                                                                                    
+python_proto_library(                                                                               
+    name = "data_python_proto",                                                              
+    deps = [":data_proto"],                                                                  
 )
