--- a/data/proto/activity/BUILD
+++ b/data/proto/activity/BUILD
@@ -1,4 +1,4 @@
-load("@rules_proto_grpc//python:defs.bzl", "python_proto_compile")                                  
+load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")                                  
 
 package(                                                                                            
   default_visibility = ["//:data_consumer"]                                                                   
@@ -15,7 +15,7 @@ cc_proto_library(
     deps = [":activity_timestamp_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_compile(                                                                               
+python_proto_library(                                                                               
     name = "activity_timestamp_python_proto",                                                              
     deps = [":activity_timestamp_proto"],                                                                  
 )                                                                                                   
@@ -35,7 +35,7 @@ cc_proto_library(
     deps = [":activity_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_compile(                                                                               
+python_proto_library(                                                                               
     name = "activity_python_proto",                                                              
     deps = [":activity_proto"],                                                                  
 )
@@ -51,7 +51,7 @@ cc_proto_library(
     deps = [":earning_activity_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_compile(                                                                               
+python_proto_library(                                                                               
     name = "earning_activity_python_proto",                                                              
     deps = [":earning_activity_proto"],                                                                  
 )
@@ -67,7 +67,7 @@ cc_proto_library(
     deps = [":earning_activity_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_compile(                                                                               
+python_proto_library(                                                                               
     name = "reorg_activity_python_proto",                                                              
     deps = [":earning_activity_proto"],                                                                  
 )
@@ -83,7 +83,7 @@ cc_proto_library(
     deps = [":earning_activity_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_compile(                                                                               
+python_proto_library(                                                                               
     name = "trading_activity_python_proto",                                                              
     deps = [":earning_activity_proto"],                                                                  
 )
