Fix issues with python proto libraries.

--- a/data/proto/BUILD
+++ b/data/proto/BUILD
@@ -1,7 +1,18 @@
-load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")                                  
+load("@rules_proto_grpc//python:defs.bzl", "python_proto_library") 
 
 package(                                                                                            
   default_visibility = ["//:data_consumer"]                                                                   
+)
+
+# Wrap all protos together for python inside //data. Otherwise they can't be imported properly.
+python_proto_library(                                                                               
+    name = "data_python_proto",                                                       
+    deps = [
+      ":fin_entity_proto",
+      ":timeline_proto",
+      ":data_proto",
+      ":data_source_config_proto",
+    ],
 )
 
 proto_library(                                                                                      
@@ -15,11 +26,6 @@ cc_proto_library(
     deps = [":fin_entity_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_library(                                                                               
-    name = "fin_entity_python_proto",                                                              
-    deps = [":fin_entity_proto"],                                                                  
-)
-
 proto_library(                                                                                      
     name = "timeline_proto",                                                                     
     srcs = ["timeline.proto"],                                                                   
@@ -34,11 +40,6 @@ cc_proto_library(
     deps = [":timeline_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_library(                                                                               
-    name = "timeline_python_proto",                                                              
-    deps = [":timeline_proto"],                                                                  
-)
-
 proto_library(                                                                                      
     name = "data_proto",                                                                     
     srcs = ["data.proto"],                                                                   
@@ -53,7 +54,15 @@ cc_proto_library(
     deps = [":data_proto"],                                                                  
 )                                                                                                   
                                                                                                     
-python_proto_library(                                                                               
-    name = "data_python_proto",                                                              
-    deps = [":data_proto"],                                                                  
-)
+proto_library (                                                                                     
+  name = "data_source_config_proto",                                                                
+  srcs = ["data_source_config.proto"],                                                              
+  deps = ["@com_google_protobuf//:any_proto"]                                                       
+)                                                                                                   
+                                                                                                    
+cc_proto_library(                                                                                   
+    name = "data_source_config_cc_proto",                                                           
+    deps = [":data_source_config_proto"],                                                           
+)                                                                                                   
+                                                                                                    
+
