Setup run parser.

--- a/data/antlr/data_generator/BUILD
+++ b/data/antlr/data_generator/BUILD
@@ -11,18 +11,20 @@ antlr(
 			"DataGeneratorLexer.g4",
 			"DataGeneratorParser.g4",
 		],                                                                             
+    layout = "src/tmp",
+    # package="data.antlr.data_generator",
     language = "Python3",                                                                           
 )                                                                                                   
                                                                                                     
 py_library(                                                                                         
     name = "data_generator_antlr_py",                                                                                   
     srcs = [":data_generator_antlr"],                                                                          
+    imports = ["data_generator_antlr.py"]
 )                                                                                                   
 
 py_binary(                                                                                          
     name = "data_generator_test",                                                               
     srcs = ["data_generator_test.py"],                                                          
-    imports = ["data_generator_antlr.py"],                                                 
     data = ["//data/antlr/data_generator/testdata:data_generator_config"],                              
     args = ["$(location //data/antlr/data_generator/testdata:data_generator_config)"],                  
     deps = [                                                                                        
